test/corpus/expressions.txt
================================================================================
Integer literals
================================================================================

0;
123;
100_000;
100_000_000;

----------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (integer)
  (integer))

============================================
Identifiers
============================================

abcd;
EF_G123;

----------------------------------------------------------------

(source_file
  (identifier)
  (identifier))

============================================
Boolean Literals
============================================

true;
false;

----------------------------------------------------------------

(source_file
  (boolean)
  (boolean))

============================================
String_Literal Literals
============================================

"";
"abc";
b"foo\nbar";
"\"foo\"";
"foo\x42\x43bar";
"foo \x42  \x43 bar";

----------------------------------------------------------------

(source_file
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal)
  (string_literal))

============================================
Character literals
============================================

'a';
'\0';
'\t';
'\'';

----------------------------------------------------------------

(source_file
  (character)
  (character)
  (character)
  (character))

============================================
Statement
============================================

let a = 2;
let z = x as u32 + y;

----------------------------------------------------------------

(source_file
  (let_declaration
    (binary_expression
      (identifier)
      (integer)))
  (let_declaration
    (binary_expression
      (identifier)
      (binary_expression
        (as_identifier
          (identifier)
          (single_type))
        (identifier)))))

============================================
Array Statement
============================================

let x = [163, 117, 178, 149];


----------------------------------------------------------------

(source_file
  (let_declaration
    (binary_expression
      (identifier)
      (array
        (integer)
        (integer)
        (integer)
        (integer)))))

============================================
Structs
============================================

struct Animal {
    hands: Field,
    legs: Field,
    eyes: u8,
}

let dog = Animal {
    eyes: 2,
    hands: 0,
    legs,
};

let Animal { hands, legs: feet, eyes } = get_octopus();

----------------------------------------------------------------

(source_file
  (struct_definition
    (identifier)
    (identifier)
    (single_type)
    (identifier)
    (single_type)
    (identifier)
    (single_type))
  (let_declaration
    (binary_expression
      (identifier)
      (struct_initialization
        (identifier)
        (identifier)
        (integer)
        (identifier)
        (integer)
        (identifier))))
  (let_declaration
    (binary_expression
      (struct_initialization
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier))
      (function_call
        (identifier)
        (parameter)))))

============================================
For loop
============================================

for i in message {
    i + 10;
}

for i in 0..8 {
    i + 10;
}

for i in 0..8 {
    arr[i] = price>>(56 - (8 * i)) & "0xff"
    
}

----------------------------------------------------------------

(source_file
  (for_loop
    (identifier)
    (identifier)
    (body
      (binary_expression
        (identifier)
        (integer))))
  (for_loop
    (identifier)
    (range
      (integer)
      (integer))
    (body
      (binary_expression
        (identifier)
        (integer))))
  (for_loop
    (identifier)
    (range
      (integer)
      (integer))
    (body
      (binary_expression
        (array_identifier
          (identifier)
          (identifier))
        (binary_expression
          (binary_expression
            (identifier)
            (grouped_expression
              (binary_expression
                (integer)
                (grouped_expression
                  (binary_expression
                    (integer)
                    (identifier))))))
          (string_literal))))))

============================================
if else statement
============================================


if (my_val > 6) | (my_val == 0) {
    flag = 0;
}

if (my_val != 10) & (my_val < 50) {
    flag = 0;
}

if a == 0 {
    if a != 0 {
        x = 6;
    } else {
        x = 2;
    }
} else {
    x = 5;
}

----------------------------------------------------------------

(source_file
  (if_exp
    (binary_expression
      (grouped_expression
        (binary_expression
          (identifier)
          (integer)))
      (grouped_expression
        (binary_expression
          (identifier)
          (integer))))
    (body
      (binary_expression
        (identifier)
        (integer))))
  (if_exp
    (binary_expression
      (grouped_expression
        (binary_expression
          (identifier)
          (integer)))
      (grouped_expression
        (binary_expression
          (identifier)
          (integer))))
    (body
      (binary_expression
        (identifier)
        (integer))))
  (if_exp
    (binary_expression
      (identifier)
      (integer))
    (body
      (if_exp
        (binary_expression
          (identifier)
          (integer))
        (body
          (binary_expression
            (identifier)
            (integer))))
      (else_exp
        (body
          (binary_expression
            (identifier)
            (integer))))))
  (else_exp
    (body
      (binary_expression
        (identifier)
        (integer)))))

============================================
Globals
============================================

global N: Field = 5;


----------------------------------------------------------------

(source_file
  (global
    (binary_expression
      (typed_identifier
        (identifier)
        (single_type))
      (integer))))

============================================
Impl Structs
============================================

struct RepeatedValue {
    value: u8,
    count: comptime Field,
}

impl RepeatedValue {
    fn new(value: u8) -> Self {
        Self { value, count: 1 }
    }

    fn increment(mut repeated: Self) -> Self {
        repeated.count += 1;
        repeated
    }

    fn print(self) {
        for _i in 0..self.count {
            dep::std::println(self.value);
        }
    }
}

----------------------------------------------------------------

(source_file
  (struct_definition
    (identifier)
    (identifier)
    (single_type)
    (identifier)
    (comptime)
    (single_type))
  (impl_block
    (identifier)
    (body
      (function_definition
        (identifier)
        (parameter
          (typed_identifier
            (identifier)
            (single_type)))
        (return_type
          (single_type))
        (body
          (struct_initialization
            (identifier)
            (identifier)
            (integer))))
      (function_definition
        (identifier)
        (parameter
          (typed_identifier
            (mutable)
            (identifier)
            (single_type)))
        (return_type
          (single_type))
        (body
          (binary_expression
            (struct_expression
              (identifier)
              (identifier))
            (integer))
          (identifier)))
      (function_definition
        (identifier)
        (parameter
          (self_method
            (self)))
        (body
          (for_loop
            (identifier)
            (range
              (integer)
              (self_method
                (self)
                (identifier)))
            (body
              (function_import
                (import_identifier
                  (identifier))
                (import_identifier
                  (identifier))
                (function_call
                  (identifier)
                  (parameter
                    (self_method
                      (self)
                      (identifier))))))))))))

============================================
Generic Structs
============================================

struct RepeatedValue<T> {
    value: T,
    count: comptime Field,
}

impl<T> RepeatedValue<T> {
    fn new(value: T) -> Self {
        Self { value, count: 1 }
    }

    fn increment(mut repeated: Self) -> Self {
        repeated.count += 1;
        repeated
    }

    fn print(self) {
        for _i in 0..self.count {
            dep::std::println(self.value);
        }
    }
}


----------------------------------------------------------------

(source_file
  (struct_definition
    (identifier)
    (generic
      (identifier))
    (identifier)
    (identifier)
    (identifier)
    (comptime)
    (single_type))
  (impl_block
    (generic
      (identifier))
    (generic_type
      (identifier)
      (generic_arguments
        (identifier)))
    (body
      (function_definition
        (identifier)
        (parameter
          (typed_identifier
            (identifier)
            (identifier)))
        (return_type
          (single_type))
        (body
          (struct_initialization
            (identifier)
            (identifier)
            (integer))))
      (function_definition
        (identifier)
        (parameter
          (typed_identifier
            (mutable)
            (identifier)
            (single_type)))
        (return_type
          (single_type))
        (body
          (binary_expression
            (struct_expression
              (identifier)
              (identifier))
            (integer))
          (identifier)))
      (function_definition
        (identifier)
        (parameter
          (self_method
            (self)))
        (body
          (for_loop
            (identifier)
            (range
              (integer)
              (self_method
                (self)
                (identifier)))
            (body
              (function_import
                (import_identifier
                  (identifier))
                (import_identifier
                  (identifier))
                (function_call
                  (identifier)
                  (parameter
                    (self_method
                      (self)
                      (identifier))))))))))))

============================================
Integer methods
============================================

straight_div_result.2;
straight_div_result.1;
straight_div_result.0;

let verify = std::ecdsa_sep256k1::verify_signatures(pkx, pky, sm[i].signature, sm[i].hashed_message);


let straight_div_result = div_wide_allow_overflow(
    a.limbs[2],
    a.limbs[1],
    a.limbs[0],
    b.limbs[2],
    b.limbs[1],
    b.limbs[0]
);


----------------------------------------------------------------

(source_file
  (struct_expression
    (identifier)
    (integer))
  (struct_expression
    (identifier)
    (integer))
  (struct_expression
    (identifier)
    (integer))
  (let_declaration
    (binary_expression
      (identifier)
      (function_import
        (import_identifier
          (identifier))
        (import_identifier
          (identifier))
        (function_call
          (identifier)
          (parameter
            (identifier)
            (identifier)
            (struct_expression
              (array_identifier
                (identifier)
                (identifier))
              (identifier))
            (struct_expression
              (array_identifier
                (identifier)
                (identifier))
              (identifier)))))))
  (let_declaration
    (binary_expression
      (identifier)
      (function_call
        (identifier)
        (parameter
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer)))
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer)))
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer)))
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer)))
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer)))
          (struct_expression
            (identifier)
            (array_identifier
              (identifier)
              (integer))))))))
